--- a/src/index.html
+++ b/src/index.html
@@ -5,29 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./index.js" defer></script>
     <link rel="stylesheet" href="./output.css">
-    <link rel="icon" href="../img/logo.png">
+    <link rel="icon" href="./img/logo.png">
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
-    <title>Gasolineras</title>
+    <title>GasFinder</title>
 </head>
-<body>
-    <h1>Gasolineras precio ordenado</h1>
+<body class="bg-gray-900 text-gray-50 w-full h-full flex flex-col items-center mt-10">
+    <h1 class="text-3xl font-bold uppercase">Gasolineras precio ordenado</h1>
     <section>
-        <label  class="label" for="CCAA">
-            <select name="CCAA" id="" class="CCAA py-2.5 px-0 text-sm text-black bg-transparent border-0 border-b-2 border-black appearance-none dark:text-gray-400 dark:border-gray-700 focus:outline-none focus:ring-0 focus:border-gray-200 peer"> 
+        <label  class="label p-2" for="CCAA">
+            <select name="CCAA" id="" class=" text-gray-50 CCAA py-2.5 px-0 text-sm  bg-gray-900 border-0 border-b-2 border-gray-50 appearance-none dark:text-gray-400 dark:border-gray-700 focus:outline-none focus:ring-0 focus:border-black peer"> 
                 <option value="" disabled selected>Comunidad Autónoma</option>
             </select>
         </label>
-        <label class="label" for="Provincia ">
-            <select name="Provincia" id="" class="Provincia py-2.5 px-0 text-sm text-black bg-transparent border-0 border-b-2 border-black appearance-none dark:text-gray-400 dark:border-gray-700 focus:outline-none focus:ring-0 focus:border-gray-200 peer">
+        <label class="label p-2" for="Provincia ">
+            <select name="Provincia" id="" class="Provincia py-2.5 px-0 text-sm text-gray-50 bg-gray-900 border-0 border-b-2 border-gray-50 appearance-none dark:text-gray-400 dark:border-gray-700 focus:outline-none focus:ring-0 focus:border-black peer">
                 <option value="" disabled selected>Provincia</option>
             </select>
         </label>
-        <label class="label" for="Municipio">
-            <select name="Municipio" id="" class="Municipio py-2.5 px-0 text-sm text-black bg-transparent border-0 border-b-2 border-black appearance-none dark:text-gray-400 dark:border-gray-700 focus:outline-none focus:ring-0 focus:border-gray-200 peer">
+        <label class="label p-2" for="Municipio">
+            <select name="Municipio" id="" class="Municipio py-2.5 px-0 text-sm text-gray-50 bg-gray-900 border-0 border-b-2 border-gray-50 appearance-none dark:text-gray-400 dark:border-gray-700 focus:outline-none focus:ring-0 focus:border-black peer">
                 <option value="" disabled selected>Municipio</option>
             </select>
         </label>
     </section>
-    <div class="container"></div>
+    <div class="container flex flex-wrap items-center pt-2"></div>
 </body>
 </html>
